# batch-rename-cli

./: README.md  batch_rename_cli.py  pyproject.toml
src/: __init__.py  batch_rename.py
tests/: __init__.py  test_batch_rename.py
