[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "batch-rename"
version = "1.0.0"
description = "Powerful batch file renaming made simple"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "IndraTensei"}
]
keywords = ["cli", "rename", "batch", "file-management", "productivity"]

[project.scripts]
batch-rename = "src.batch_rename:main"

[tool.setuptools.packages.find]
include = ["src*"]
